--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,13 @@
 name: 'Hello World'
-description: 'Greet someone and record the time'
+description: 'Greet someone and record time'
 inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
-    required: true
-    default: 'World'
+ who-to-greet:
+  description: 'who to greet'
+  required: true
+  default: 'World'
 outputs:
-  time: # id of output
-    description: 'The time we greeted you'
+ time:
+  description: 'The time we greeted you'
 runs:
-  using: 'node16'
-  main: 'index.js'
+ using: 'node12'
+ main: 'index.js'
