--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,12 @@ jobs:
      id: hello
      uses: nishantatgit/github-action-hello-world@v1.2
      with:
-      who-to-greet: 'Nishant Kuamar Shreevastav'	
+      who-to-greet: 'Nishant Kuamar Shreevastav'
+      inputList:
+        - javascript
+        - HTML5
+        - CSS3
+        - React	
    - name: Get the output time
      id: outputtime
      run: echo "The time was ${{steps.hello.outputs.time}}"
